Update Early article

--- a/_posts/2020-01-26-early.md
+++ b/_posts/2020-01-26-early.md
@@ -12,7 +12,7 @@ tags:
   - Edge
 ---
 
-With voice assistants becoming ubiquitous we get used to things listening to us. However, home made solutions have the advantage that we do not rely on outer services who might use our voice data for whatever. In this article we explore how to get a headless RaspberryPi Zero W to be our offline assistant.
+With voice assistants becoming ubiquitous we get used to **things listening** to us. In this article we explore how to get a **headless RaspberryPi Zero W** to be our **offline voice assistant**.
 
 <!-- more -->
 
