Update Early article

--- a/_posts/2020-01-26-early.md
+++ b/_posts/2020-01-26-early.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "Getting started with offline Voice Recognition"
-sub_title: "Using the Respeaker 2-Mics Pi Hat"
+sub_title: "RPi with the Respeaker 2-Mics Pi Hat"
 excerpt_separator:  <!-- more -->
 categories:
   - Tinker
