Update Early article

--- a/_posts/2020-01-26-early.md
+++ b/_posts/2020-01-26-early.md
@@ -16,7 +16,7 @@ With voice assistants becoming ubiquitous we get used to **things listening** to
 
 <!-- more -->
 
-_Disclaimer: This is a work in progress. This one is just barely working. And I didn't proof-read it._
+_Disclaimer: This is a work in progress. This one is just barely working. And I didn't even proof-read it thoroughly._
 
 ## Hardware
 
@@ -46,7 +46,7 @@ Download a Raspbian lite image from here: [https://www.raspberrypi.org/downloads
 sudo dd bs=4M if=2019-09-26-raspbian-buster-lite.img of=/dev/mmcblk0 status=progress conv=fsync
 ```
 
-And here we enjoy the U1 quality of a SD card:
+And here we enjoy the U1 quality of our SD card:
 
 ![](https://rscircus.github.io/assets/img/20200126_EarlyDD.png)
 
@@ -165,15 +165,15 @@ Enjoy!
 ------------------------------------------------------
 ```
 
-afterwards you can check if everything works by plugging a headset by cable into the ReSpeaker and run this command:
+and thus we simply follow the instructions and `sudo reboot`.
+
+Afterwards you can check if everything works by plugging a headset by cable into the ReSpeaker and run this command:
 
 ```
 arecord -f cd -Dhw:1 | aplay -Dhw:1
 ```
 
 If we say something we will hear what we say with a huge delay. If this doesn't work, check if the sound card 1 name matches seed-2mic-voicecard by comparing the outputs of `aplay -l` and `arecord -l`.
-
-and thus we simply follow the instructions and `sudo reboot`.
 
 We can configure everything with `alsamixer` if stuff is too loud and such.
 
