Update Early article

--- a/_posts/2020-01-26-early.md
+++ b/_posts/2020-01-26-early.md
@@ -270,7 +270,7 @@ let's add our user with
 sudo usermod -a -G docker $USER
 ```
 
-and we discover that this might be bit too much for the zero, when looking at `top`. 
+and we discover that this might be bit too much for the zero, when looking at `top`.
 
 ### Virtual Environment (this works)
 
@@ -298,9 +298,7 @@ cd rhasspy/
 
 Ignore the messages about the failing Kaldi. The come from `download-dependencies.sh` and it's not supported on the `armv6l` platform. :/
 
-The overall downloads above take a while... 
-
-**--> I'm here right now**
+The overall downloads above take a while...
 
 after this:
 
@@ -313,6 +311,10 @@ if all is well, rhasspy should run at
 ```
 http://early.whatever:12101
 ```
+
+## Conclusion
+
+In this article we set up the tiny RaspberryPi Zero WH with the ReSpeaker 2 Mics. We set everything up using Rasbian and seeedstudio's software stack. Rhasspy installed the regular steck omitting Kaldi (which is unfortunate). Basically, everything works. However, the Zero is so weak, that it takes a very long time to even understand short sentences. I'll show a gif soon. Therefore, I shift this to the Raspberry Pi 4B and see how well this one performs.
 
 
 ## Sources
