Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -10,7 +10,9 @@ tags:
   - work
 ---
 
-According to the World Health Organization (WHO), occupational burnout is a syndrome resulting from chronic work-related stress, with symptoms characterized by "feelings of energy depletion or exhaustion; increased mental distance from one’s job, or feelings of negativism or cynicism related to one's job; and reduced professional efficacy." -- that's what wikipedia has to say about it in the first sentence of [this article](https://en.wikipedia.org/wiki/Occupational_burnout). And that's what I'll be talking about here.
+>According to the World Health Organization (WHO), occupational burnout is a syndrome resulting from chronic work-related stress, with symptoms characterized by "feelings of energy depletion or exhaustion; increased mental distance from one’s job, or feelings of negativism or cynicism related to one's job; and reduced professional efficacy."
+
+This is what wikipedia has to say about it in the first sentence of [this article](https://en.wikipedia.org/wiki/Occupational_burnout). And that's what I'll be talking about here.
 
 <!-- more -->
 
@@ -71,9 +73,9 @@ As already said, the regular treatment of depression is applied often. Additiona
 
 Good luck, you can do it!
 
-## Sources
+### Sources
 
-[^maslach]: Maslach, C.; Schaufeli, W. B.; Leiter M. P. - https://doi.org/10.1146%2Fannurev.psych.52.1.397
-[^wurm]: Wurm, W.; Vogel, K.; Holl, A. - https://doi.org/10.1371%2Fjournal.pone.0149913
-[^farber]: Farber, Barry A. - https://archive.org/details/crisisineducatio0000farb
-[^bianchi]: Bianchi, Renzo et al. - https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1537&context=gc_pubs
+[^maslach]: Maslach, C.; Schaufeli, W. B.; Leiter M. P. - [https://doi.org/10.1146%2Fannurev.psych.52.1.397](https://rscircus.github.io/2021/04/20/burnout.html)
+[^wurm]: Wurm, W.; Vogel, K.; Holl, A. - [https://doi.org/10.1371%2Fjournal.pone.0149913](https://rscircus.github.io/2021/04/20/burnout.html)
+[^farber]: Farber, Barry A. - [https://archive.org/details/crisisineducatio0000farb](https://rscircus.github.io/2021/04/20/burnout.html)
+[^bianchi]: Bianchi, Renzo et al. - [https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1537&context=gc_pubs](https://rscircus.github.io/2021/04/20/burnout.html)
