Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -12,15 +12,15 @@ tags:
 
 >According to the World Health Organization (WHO), occupational burnout is a syndrome resulting from chronic work-related stress, with symptoms characterized by "feelings of energy depletion or exhaustion; increased mental distance from one’s job, or feelings of negativism or cynicism related to one's job; and reduced professional efficacy."
 
-This is what wikipedia has to say about it in the first sentence of [this article](https://en.wikipedia.org/wiki/Occupational_burnout). And that's what I'll be talking about here.
+Let's boil [this](https://en.wikipedia.org/wiki/Occupational_burnout) down to have a better understanding and ways out.
 
 <!-- more -->
 
-Recently, partially also accelerated by the social situation caused by COVID-19 in Germany, I see many cases of burnout around me. If one finds him/herselfs in the following situation, take a moment to accept this and start to find a way out which may involve the help of others.
+Recently -- partially also accelerated by the social situation caused by COVID-19 in Germany -- I see many cases of burnout around me. If one finds him/herselfs in the following situation, take a moment to accept this and start to find a way out which may involve the help of others and this article.
 
 ## Risk factors
 
-There are six[^maslach]:
+There are six[^maslach]. Take a deep look at the following list and see how many match your workplace:
 
 - Mismatch in workload
 - Mismatch in control
@@ -29,13 +29,17 @@ There are six[^maslach]:
 - (Perceived) lack of fairness
 - Conflict between values
 
-These give way to some subtypes[^farber]:
+These give way to some subtypes[^farber] as not all risk factors may be present.
 
 ## Subtypes
+
+These are:
 
 - _"wearout" and "brown-out,"_ = too much stress and/or too little reward
 - _"classic/frenetic burnout,"_ = increasing load on oneself in stressful situation and/or while seeking reward for work
 - _"underchallenged burnout,"_ = low stress, but the work is unrewarding.
+
+Yepp, one can have workout from being underchallenged and having an unrewarding work experience. Some well known German companies used these strategies specifically to force specific workers to quit.
 
 ## Depression
 
@@ -48,27 +52,35 @@ Burnout is depression, as it comes with the full array of depressive symptoms[^w
 - cognitive alterations
 - sleep disturbence
 
-and also treated like it.
+and also often treated like it.
 
 ## Short and long-term effects
 
-This might seem obvious, but sometimes aren't when the affected person is in a depressive state.
+This might seem obvious, but sometimes is not. Especially, when the affected person is in a depressive state:
 
-- can induce further mental health problems
-- reduced overall efficacy
-- cognitive impairments (memory/attention)
-- loss of workplace
+Burnout
 
-Even though, above words might sounds harsh, these are _protection mechanisms_. A stressor is attempted to be evaded, be it by absenteeism or general weaker 'connection to reality'.
+- can induce further mental health problems,
+- reduces overall efficacy,
+- causes cognitive impairments (memory/attention),
+- can cause loss of workplace.
+
+Even though it might not be obvious, these are _protection mechanisms_ by the mind.
+
+A stressor is attempted to be evaded. Be it by cynicism, absenteeism and finally if no path out is found general weaker 'connection to reality'.
 
 ## Treatment & Paths out of it
 
 As already said, the regular treatment of depression is applied often. Additionally to this, the stressors have to be removed to avoid relapse. This can happen in various ways. Here is a selection to get started:
 
-- Set boundaries. Write them down. Commit them to memory. (_Example: I'll stop working at 19:00 latest, to go for a run or call a friend._)
-- Starting the day with a relaxing ritual. (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking any bright rectangle._)
-- Search for a workplace, where the risk factors are minimal. In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then
-- Create a vision to achieve the above. Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life.
+- Set boundaries.
+  Write them down. Commit them to memory. (_Example: I'll stop working at 19:00 latest, to go for a run or call a friend._)
+- Starting the day with a relaxing ritual.
+  (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking any bright rectangle._)
+- Search for a workplace, where the risk factors are minimal.
+  In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then
+- Create a vision to achieve the above.
+  Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life.
 - Involve loved ones or good friends (ideally the type that doesn't let you down no matter what).
 
 Good luck, you can do it!
