Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -87,7 +87,7 @@ Good luck, you can do it!
 
 ### Sources
 
-[^maslach]: Maslach, C.; Schaufeli, W. B.; Leiter M. P. - [https://doi.org/10.1146%2Fannurev.psych.52.1.397](https://rscircus.github.io/2021/04/20/burnout.html)
-[^wurm]: Wurm, W.; Vogel, K.; Holl, A. - [https://doi.org/10.1371%2Fjournal.pone.0149913](https://rscircus.github.io/2021/04/20/burnout.html)
-[^farber]: Farber, Barry A. - [https://archive.org/details/crisisineducatio0000farb](https://rscircus.github.io/2021/04/20/burnout.html)
-[^bianchi]: Bianchi, Renzo et al. - [https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1537&context=gc_pubs](https://rscircus.github.io/2021/04/20/burnout.html)
+[^maslach]: Maslach, C. et al. - [https://doi.org/10.1146%2Fannurev.psych.52.1.397](https://rscircus.github.io/2021/04/20/burnout.html)
+[^wurm]: Wurm, W. et al. - [https://doi.org/10.1371%2Fjournal.pone.0149913](https://rscircus.github.io/2021/04/20/burnout.html)
+[^farber]: Farber, B. A. - [https://archive.org/details/crisisineducatio0000farb](https://rscircus.github.io/2021/04/20/burnout.html)
+[^bianchi]: Bianchi, R. et al. - [https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=1537&context=gc_pubs](https://rscircus.github.io/2021/04/20/burnout.html)
