Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -52,7 +52,7 @@ Burnout is depression, as it comes with the full array of depressive symptoms[^w
 - cognitive alterations
 - sleep disturbence
 
-and also often treated like it.
+and is also often treated like it.
 
 ## Short and long-term effects
 
