Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -4,7 +4,7 @@ title:  "Occupational Burnout"
 sub_title: "Things to watch for"
 excerpt_separator:  <!-- more -->
 categories:
-  - life
+  - Life
 tags:
   - life
   - work
