Update burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -39,7 +39,7 @@ These are:
 - _"classic/frenetic burnout,"_ = increasing load on oneself in stressful situation and/or while seeking reward for work
 - _"underchallenged burnout,"_ = low stress, but the work is unrewarding.
 
-Yepp, one can have workout from being underchallenged and having an unrewarding work experience. Some well known German companies used these strategies specifically to force specific workers to quit.
+Yepp, one can have workout from being underchallenged and having an unrewarding work experience. Some well known German companies used these strategies specifically to force workers to quit.
 
 ## Depression
 
@@ -65,11 +65,9 @@ Burnout
 - causes cognitive impairments (memory/attention),
 - can cause loss of workplace.
 
-Even though it might not be obvious, these are _protection mechanisms_ by the mind.
+Even though it might not be obvious, these are _protection mechanisms_ by the mind.  A stressor is attempted to be evaded. Be it by cynicism, absenteeism and finally if no path out is found: a weaker 'connection to reality'.
 
-A stressor is attempted to be evaded. Be it by cynicism, absenteeism and finally if no path out is found general weaker 'connection to reality'.
-
-## Treatment & Paths out of it
+## Treatment & paths out of it
 
 As already said, the regular treatment of depression is applied often. Additionally to this, the stressors have to be removed to avoid relapse. This can happen in various ways. Here is a selection to get started:
 
