Fix typos in burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -39,11 +39,11 @@ These are:
 - _"classic/frenetic burnout,"_ = increasing load on oneself in stressful situation and/or while seeking reward for work
 - _"underchallenged burnout,"_ = low stress, but the work is unrewarding.
 
-Yepp, one can have workout from being underchallenged and having an unrewarding work experience. Some well known German companies used these strategies specifically to force workers to quit.
+Yepp, one can have burnout from being underchallenged and having an unrewarding work experience. Some well known German companies used these strategies specifically to force workers to quit.
 
 ## Depression
 
-Burnout is depression, as it comes with the full array of depressive symptoms[^wurm]:
+Burnout is depression as it comes with the full array of depressive symptoms[^wurm]:
 
 - cynicism
 - lack of efficacy, especially professional efficacy
@@ -56,7 +56,7 @@ and is also often treated like it.
 
 ## Short and long-term effects
 
-This might seem obvious, but sometimes is not. Especially, when the affected person is in a depressive state:
+This might seem obvious, but sometimes are not. Especially, when the affected person is in a depressive state:
 
 Burnout
 
@@ -74,11 +74,11 @@ As already said, the regular treatment of depression is applied often. Additiona
 - Set boundaries.
   Write them down. Commit them to memory. (_Example: I'll stop working at 19:00 latest, to go for a run or call a friend._)
 - Starting the day with a relaxing ritual.
-  (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking any bright rectangle._)
+  (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking at any bright rectangle._)
 - Search for a workplace, where the risk factors are minimal.
-  In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then
+  _In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then:_
 - Create a vision to achieve the above.
-  Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life.
+  _Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life._
 - Involve loved ones or good friends (ideally the type that doesn't let you down no matter what).
 
 Good luck, you can do it!
