Layouting in burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -71,15 +71,15 @@ Even though it might not be obvious, these are _protection mechanisms_ by the mi
 
 As already said, the regular treatment of depression is applied often. Additionally to this, the stressors have to be removed to avoid relapse. This can happen in various ways. Here is a selection to get started:
 
-- Set boundaries.
-  Write them down. Commit them to memory. (_Example: I'll stop working at 19:00 latest, to go for a run or call a friend._)
-- Starting the day with a relaxing ritual.
+- **Set boundaries.**
+  _Write them down. Commit them to memory. (Example: I'll stop working at 19:00 latest, to go for a run or call a friend.)_
+- **Starting the day with a relaxing ritual.**
   (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking at any bright rectangle._)
-- Search for a workplace, where the risk factors are minimal.
+- **Search for a workplace, where the risk factors are minimal.**
   _In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then:_
-- Create a vision to achieve the above.
+- **Create a vision to achieve the above.**
   _Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life._
-- Involve loved ones or good friends (ideally the type that doesn't let you down no matter what).
+- **Involve loved ones or good friends.** _(Ideally the type that doesn't let you down no matter what.)_
 
 Good luck, you can do it!
 
