Minor typos in burnout article

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -73,9 +73,9 @@ As already said, the regular treatment of depression is applied often. Additiona
 
 - **Set boundaries.**
   _Write them down. Commit them to memory. (Example: I'll stop working at 19:00 latest, to go for a run or call a friend.)_
-- **Starting the day with a relaxing ritual.**
+- **Start the day with a relaxing ritual.**
   (_Example: Lay the phone in another room and optionally turn it off. Do some yoga, or just sit and drink coffee without touching or looking at any bright rectangle._)
-- **Search for a workplace, where the risk factors are minimal.**
+- **Search for a workplace where the risk factors are minimal.**
   _In short: A workplace with good workload, (own) control, reward, community, fairness, and values. Sometimes this is not possible, then:_
 - **Create a vision to achieve the above.**
   _Sometimes this needs a change of lifestyle - usually towards a 'simpler' but happier life._
