Add bianchi reference

--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -43,7 +43,7 @@ Yepp, one can have burnout from being underchallenged and having an unrewarding 
 
 ## Depression
 
-Burnout is depression as it comes with the full array of depressive symptoms[^wurm]:
+Burnout is depression[^bianchi] as it comes with the full array of depressive symptoms[^wurm]:
 
 - cynicism
 - lack of efficacy, especially professional efficacy
