--- a/_posts/2021-04-20-burnout.md
+++ b/_posts/2021-04-20-burnout.md
@@ -56,7 +56,7 @@ and is also often treated like it.
 
 ## Short and long-term effects
 
-This might seem obvious, but sometimes are not. Especially, when the affected person is in a depressive state:
+These might seem obvious, but sometimes are not. Especially, when the affected person is in a depressive state:
 
 Burnout
 
