--- a/themes/PaperModded/i18n/en.yaml
+++ b/themes/PaperModded/i18n/en.yaml
@@ -6,8 +6,8 @@
 
 - id: read_time
   translation:
-    one : "1 min"
-    other: "{{ .Count }} min"
+    one : "est. reading time: 1 min"
+    other: "est. reading time: {{ .Count }} min"
 
 - id: words
   translation:
